<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_in_browser"
        android:icon="@drawable/ic_open_in_browser"
        android:title="@string/menu_open_in_browser"
        app:showAsAction="ifRoom" />
</menu>